# trip-compass

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/: main.go
database/: schema.sql
docs/integration/: 00-OVERVIEW.md  01-API-CONTRACTS.md  02-AUTH-FLOW.md  03-AI-PLANNER-FLOW.md  04-ITINERARY-COLLAB-FLOW.md  05-PLACES-COMBOS-FLOW.md  06-FRONTEND-INFRA.md  README.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auth-layout.tsx  cta-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  itinerary-card.tsx  itinerary-map-dynamic.tsx  itinerary-map.tsx  navigation.tsx  place-card.tsx  require-auth.tsx  (+2 more)
planner-ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
planner-ai/app/: __init__.py  agent.py  config.py  db.py  graph.py  main.py  schemas.py  state.py  streaming.py
planner-ai/app/nodes/: budget.py  enrich.py  resolve.py  schedule.py  validate.py
planner-ai/app/prompts/: __init__.py  agent.py  enrich.py  schedule.py
planner-ai/app/routes/: cache.py  chat.py  plan.py  sessions.py
planner-ai/app/services/: chat_history.py  database.py  plan_cache.py  redis.py  session_manager.py
planner-ai/app/tools/: __init__.py  create_plan.py  get_combos.py  get_food_venues.py  get_places.py  get_real_prices.py  get_weather.py  search_flights.py  search_hotels.py
planner-ai/tests/: test_nodes.py
(+106 files in other folders)
